conf: pose un formateur de chaque côté et un Makefile pour les lancer
Le dépôt n'avait aucun formateur : le style tenait à la seule discipline, ce qui
cesse de tenir dès qu'une deuxième main écrit du code.

Côté back, Spotless avec palantir-java-format. Pas google-java-format, même en
style AOSP : il fait exploser les chaînes de builders en cascades de huit espaces
et repousse le code si loin à droite que les commentaires de fin de ligne se
retrouvent redécoupés en milieu de phrase — inacceptable dans un dépôt dont les
commentaires portent le raisonnement. Le Javadoc n'est reformaté par aucun des
deux. `gradle.properties` porte les --add-exports sans lesquels le formateur
échoue : il analyse le code avec les API internes de javac, fermées par JEP 396.

Côté front, Prettier, configuré sur le style déjà écrit dans src/ — pas de
point-virgule, guillemets simples. package-lock.json est hors de sa portée : npm
le réécrit à sa façon, le formater ferait un aller-retour à chaque install.

Le Makefile fige les deux invocations Docker qu'il fallait jusqu'ici redéfinir en
fonction shell à chaque session. Trois verbes — format, check, build — chacun
décliné en -back et -front.

La CI refuse désormais du code non formaté des deux côtés. Côté Java sans étape
dédiée : Spotless accroche spotlessCheck à la tâche check, donc au build.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>